ComparisonDataComponent Updated Optimization Done

--- a/locale/bn.json
+++ b/locale/bn.json
@@ -644,7 +644,8 @@
       "to": "পর্যন্ত",
       "toWord": "থেকে",
       "compare": "তুলনা করুন",
-      "downloadPdf": "পিডিএফ ডাউনলোড"
+      "downloadPdf": "পিডিএফ ডাউনলোড",
+      "loading": "তুলনা ডাটা লোড হচ্ছে..."
     },
     "table": {
       "label": "লেবেল",
