Dayee Weekly Plans Done

--- a/locale/bn.json
+++ b/locale/bn.json
@@ -38,6 +38,7 @@
       "kargojariSubject": "কারগুজারী",
       "dayeReview": "দা'ঈ রিভিউ",
       "leaveSubject": "ছুটি বিষয়",
+      "weeklyTodo": "সাপ্তাহিক পরিকল্পনা",
       "calendar": "কর্মসূচি",
       "addDayi": "দা'ঈ এড করুন",
       "viewDayi": "দা'ঈ দেখুন",
