--- a/locale/en.json
+++ b/locale/en.json
@@ -38,6 +38,7 @@
         "dayeReview": "Dayee Review",
         "kargojariSubject": "Kargojari",
         "leaveSubject": "Leave Matters",
+        "weeklyTodo": "Weekly Plan",
         "calendar": "Program",
         "addDayi": "Add Daee",
         "viewDayi": "View Daee",
