সাপ্তাহিক পরিকল্পনা Done

--- a/locale/bn.json
+++ b/locale/bn.json
@@ -432,12 +432,12 @@
     "close": "বন্ধ করুন",
     "cancel": "বাতিল",
     "save": "সংরক্ষণ",
-    "error":"ত্রুটি",
-    "success":"সফল",
-    "warning":"সতর্ক",
-    "info":"একটি বিজ্ঞানী",
-    "loading":"লোড হচ্ছে...",
-    "tryAgain":"আবার চেষ্টা করুন"
+    "error": "ত্রুটি",
+    "success": "সফল",
+    "warning": "সতর্ক",
+    "info": "একটি বিজ্ঞানী",
+    "loading": "লোড হচ্ছে...",
+    "tryAgain": "আবার চেষ্টা করুন"
   },
   "editRequest": {
     "title": "সম্পাদনার অনুমতি অনুরোধ",
@@ -460,18 +460,18 @@
       "totalRequests": "মোট আবেদন",
       "title": "ছুটির পরিসংখ্যান",
       "allowances": "ছুটির বরাদ্দ",
-     "total":"মোট",
-     "remaining":"বাকি",
-     "totalremaining":"মোট বাকি",
+      "total": "মোট",
+      "remaining": "বাকি",
+      "totalremaining": "মোট বাকি",
       "approvedShort": "অনুমোদিত",
       "pendingShort": "অপেক্ষমাণ",
-      "day":"দিন",
+      "day": "দিন",
       "rejectedShort": "বাতিল",
-      "totalappilied":"মোট আবেদন",
+      "totalappilied": "মোট আবেদন",
       "daysRequested": "চাওয়া দিনের সংখ্যা",
       "daysApproved": "অনুমোদিত দিনের সংখ্যা",
       "upcomingLeave": "পরবর্তী অনুমোদিত ছুটি",
-      "daysSummary":"দিনের পরিসংখ্যান",
+      "daysSummary": "দিনের পরিসংখ্যান",
       "rejectionRate": "বাতিলের হার",
       "popularType": "সবচেয়ে বেশি নেওয়া ধরন",
       "none": "—",
@@ -1055,7 +1055,7 @@
       "required": "আবশ্যক"
     }
   },
-   "dayeReview": {
+  "dayeReview": {
     "header": {
       "title": "দা'ঈ রিভিউ",
       "subtitle": "কাজের অগ্রগতি পর্যালোচনা করুন"
@@ -1103,6 +1103,158 @@
     "toast": {
       "fetchDayeesError": "দা'ঈদের তথ্য লোড করতে ব্যর্থ",
       "fetchStatusError": "সাবমিশন স্ট্যাটাস লোড করতে ব্যর্থ"
+    }
+  },
+  "weeklyTodo": {
+    "modal": {
+      "addTitle": "নতুন প্ল্যান যোগ করুন",
+      "editTitle": "প্ল্যান সম্পাদনা করুন",
+      "close": "বন্ধ করুন",
+      "fields": {
+        "title": "শিরোনাম",
+        "details": "বিস্তারিত",
+        "scheduledDate": "নির্ধারিত তারিখ",
+        "status": "স্ট্যাটাস"
+      },
+      "placeholders": {
+        "title": "প্ল্যানের শিরোনাম লিখুন",
+        "details": "প্ল্যানের বিস্তারিত লিখুন"
+      },
+      "status": {
+        "pending": "বিচারাধীন",
+        "completed": "সম্পন্ন",
+        "cancelled": "বাতিল"
+      },
+      "buttons": {
+        "cancel": "বাতিল",
+        "create": "প্ল্যান তৈরি করুন",
+        "update": "প্ল্যান আপডেট করুন",
+        "creating": "তৈরি করা হচ্ছে...",
+        "updating": "আপডেট করা হচ্ছে..."
+      },
+      "errors": {
+        "createFailed": "প্ল্যান তৈরি করতে ব্যর্থ হয়েছে। অনুগ্রহ করে আবার চেষ্টা করুন।",
+        "updateFailed": "প্ল্যান আপডেট করতে ব্যর্থ হয়েছে। অনুগ্রহ করে আবার চেষ্টা করুন।"
+      }
+    },
+    "card": {
+      "notScheduled": "নির্ধারিত নেই",
+      "status": {
+        "pending": "অপেক্ষমান",
+        "completed": "সম্পন্ন",
+        "cancelled": "বাতিল"
+      },
+      "expand": "প্রসারিত করুন",
+      "collapse": "সঙ্কুচিত করুন",
+      "readMore": "আরও পড়ুন",
+      "date": "তারিখ",
+      "completed": "সম্পন্ন",
+      "created": "তৈরি হয়েছে",
+      "edit": "সম্পাদনা",
+      "delete": "মুছুন",
+      "deleteModal": {
+        "title": "মুছে ফেলার নিশ্চিতকরণ",
+        "description": "আপনি কি নিশ্চিত যে এই প্ল্যানটি মুছে ফেলতে চান? এই কাজটি পূর্বাবস্থায় ফেরানো যাবে না।",
+        "cancel": "বাতিল",
+        "confirm": "মুছুন",
+        "deleting": "মুছছু..."
+      }
+    },
+    "adminWeeklyTodo": {
+      "title": "সাপ্তাহিক পরিকল্পনা - অ্যাডমিন ভিউ",
+      "subtitle": "সকল ইউজারের সাপ্তাহিক পরিকল্পনা দেখুন ও ম্যানেজ করুন",
+      "loading": "প্ল্যান লোড হচ্ছে...",
+      "refresh": "রিফ্রেশ",
+      "expandAll": "সব খুলুন",
+      "collapseAll": "সব বন্ধ করুন",
+      "totalUsers": "জন ব্যবহারকারী",
+      "plans": "টি প্ল্যান",
+      "noPlans": "কোন প্ল্যান নেই",
+      "noData": "কোন ডাটা পাওয়া যায়নি",
+      "noDataDescription": "আপনার বর্তমান ফিল্টারে কোন প্ল্যান নেই।",
+      "date": "তারিখ",
+      "completed": "সম্পন্ন",
+      "created": "তৈরি হয়েছে",
+      "notScheduled": "নির্ধারিত নেই",
+      "filters": {
+        "user": "ব্যবহারকারী",
+        "allUsers": "সকল ব্যবহারকারী",
+        "status": "স্ট্যাটাস",
+        "allStatus": "সব স্ট্যাটাস",
+        "dateRange": "তারিখ",
+        "selectDate": "তারিখ নির্বাচন করুন",
+        "byDay": "দিন অনুযায়ী ফিল্টার"
+      },
+      "status": {
+        "pending": "অপেক্ষমান",
+        "completed": "সম্পন্ন",
+        "cancelled": "বাতিল"
+      },
+      "dateRange": {
+        "thisWeek": "এই সপ্তাহ",
+        "lastWeek": "গত সপ্তাহ",
+        "custom": "কাস্টম"
+      },
+      "weekdays": {
+        "fullWeek": "সপ্তাহের সব দিন",
+        "saturday": "শনিবার",
+        "sunday": "রবিবার",
+        "monday": "সোমবার",
+        "tuesday": "মঙ্গলবার",
+        "wednesday": "বুধবার",
+        "thursday": "বৃহস্পতিবার",
+        "friday": "শুক্রবার"
+      },
+      "errors": {
+        "loadFailed": "ডাটা লোড করতে ব্যর্থ হয়েছে। অনুগ্রহ করে আবার চেষ্টা করুন।"
+      }
+    },
+    "DayeWeeklyTodo": {
+      "title": "সাপ্তাহিক পরিকল্পনা",
+      "subtitle": "আপনার সাপ্তাহিক কাজ এবং কার্যক্রম দক্ষতার সাথে পরিচালনা করুন",
+      "addPlan": "নতুন প্ল্যান যোগ করুন",
+      "loading": "প্ল্যান লোড হচ্ছে...",
+      "refresh": "রিফ্রেশ",
+      "refreshing": "রিফ্রেশ করা হচ্ছে...",
+      "showingPlans": "টি প্ল্যান দেখানো হচ্ছে",
+      "noPlans": "কোন প্ল্যান পাওয়া যায়নি",
+      "noPlansDescription": "আপনার প্রথম সাপ্তাহিক পরিকল্পনা তৈরি করে শুরু করুন।",
+      "stats": {
+        "total": "সর্বমোট প্ল্যান",
+        "completed": "সম্পন্ন",
+        "pending": "অপেক্ষমান",
+        "cancelled": "বাতিল"
+      },
+      "filters": {
+        "dateRange": "তারিখের সীমা",
+        "selectDate": "তারিখ নির্বাচন করুন",
+        "status": "স্ট্যাটাস ফিল্টার",
+        "allStatus": "সব স্ট্যাটাস",
+        "byDay": "দিন অনুযায়ী ফিল্টার"
+      },
+      "status": {
+        "pending": "Pending",
+        "completed": "Completed",
+        "cancelled": "Cancelled"
+      },
+      "dateRange": {
+        "thisWeek": "এই সপ্তাহ",
+        "lastWeek": "গত সপ্তাহ",
+        "custom": "কাস্টম"
+      },
+      "weekdays": {
+        "fullWeek": "সপ্তাহের সব দিন",
+        "saturday": "শনিবার",
+        "sunday": "রবিবার",
+        "monday": "সোমবার",
+        "tuesday": "মঙ্গলবার",
+        "wednesday": "বুধবার",
+        "thursday": "বৃহস্পতিবার",
+        "friday": "শুক্রবার"
+      },
+      "errors": {
+        "loadFailed": "প্ল্যান লোড করতে ব্যর্থ হয়েছে। অনুগ্রহ করে আবার চেষ্টা করুন।"
+      }
     }
   }
 }
