--- a/locale/bn.json
+++ b/locale/bn.json
@@ -1143,11 +1143,11 @@
         "updateFailed": "প্ল্যান আপডেট করতে ব্যর্থ হয়েছে। অনুগ্রহ করে আবার চেষ্টা করুন।"
       },
       "warning": {
-        "title": "শনিবার ও রবিবার শুধুমাত্র",
+        "title": "শুধুমাত্র রবিবার এবং সোমবার",
         "msg1": "আপনি শুধুমাত্র সাপ্তাহিক প্ল্যান যোগ করতে পারবেন",
         "and": "এবং",
-        "saturday": "শনিবার",
-        "sunday": "রবিবার",
+        "saturday": "রবিবার",
+        "sunday": "সোমবার",
         "msg2": "পরের সপ্তাহান্তে আবার চেষ্টা করুন।",
         "ok": "ঠিক আছে, বুঝেছি"
       }
